ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trino-ingress
  namespace: trino
spec:
  rules:
    - host: "trino.com"
      http:
        paths:
          - backend:
              service:
                name: trino
                port:
                  name: http
            path: /
            pathType: Prefix

  tls:
    - hosts:
        - "trino.com"
      secretName: trino-tls
